objects/Tag_Item__c.object
<CustomObject>
    <description>Created By :- Veeresh Alur 
Date: 04-Feb-14 
Capability: ES Social Learning 
Release: 1.1 
Description: Associated tags will present</description>
    <fields>
        <fullName>Item_Identifier__c</fullName>
        <label>Item Identifier</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_ID__c</fullName>
        <label>Tag ID</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>Tag Items</relationshipLabel>
        <relationshipName>Tag_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tag Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TITEM-{00000}</displayFormat>
        <label>Tag Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>